--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.9",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
